openhands-manifests/Ingress-openhands-integrations-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: openhands
  name: openhands-integrations-ingress
  annotations: {}
spec:
  ingressClassName: traefik
  rules:
  - host: openhands.site.tld
    http:
      paths:
      - path: /integration/github/events
        pathType: Exact
        backend:
          service:
            name: openhands-integrations-service
            port:
              number: 3000
      - path: /integration/gitlab/events
        pathType: Exact
        backend:
          service:
            name: openhands-integrations-service
            port:
              number: 3000
      - path: /integration/jira/events
        pathType: Exact
        backend:
          service:
            name: openhands-integrations-service
            port:
              number: 3000
      - path: /api/billing/stripe-webhook
        pathType: Exact
        backend:
          service:
            name: openhands-integrations-service
            port:
              number: 3000
      - path: /slack
        pathType: Prefix
        backend:
          service:
            name: openhands-integrations-service
            port:
              number: 3000
      - path: /oauth/device
        pathType: Prefix
        backend:
          service:
            name: openhands-integrations-service
            port:
              number: 3000
